[metadata]
name = odinweb
author = Tim Savage
author_email = tim@savage.company
summary = Toolkit for building web API's using Odin
description-file = README.rst
home-page = https://github.com/python-odin/odinweb
license = BSD
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
keywords =
    web
    api
    restful

[files]
packages =
    odinweb
data_files =
    static = static/*


[flake8]
ignore = E305

[bdist_wheel]
universal = 1
